# ChromaGit

./: INSTALL.md  README.md  build_all.py  build_simple.py  chromagit_desktop.py  install.ps1  install.sh  install_all_executables.ps1  install_path.ps1  install_path.sh  install_simple.ps1  main.py  pyproject.toml  quick_install.ps1  requirements.txt  test_installation.bat
.chromagit/: config.json  log.txt
.chromagit/backup/: config_backup_20250909_024637.json  config_backup_20250909_025310.json  config_backup_20250909_025617.json  config_backup_20250909_025624.json  push_backup_20250909_030029.json  push_backup_20250909_031530.json  push_backup_20250909_031556.json  push_backup_20250909_031806.json  push_backup_20250909_031857.json
cli/: README.md  chromagit.bat  chromagit.py
docs/: commands.md  developer-guide.md  user-guide.md
